@@ -36,6 +36,30 @@ enum {
 
 static gboolean busy_cursor = FALSE;
 
+static gboolean
+logview_show_busy_cursor (LogviewWindow *logview)
+{
+  GdkCursor *cursor;
+  if (GTK_WIDGET_VISIBLE (logview->view) && logview->curlog->model == NULL) {
+    cursor = gdk_cursor_new (GDK_WATCH);
+    gdk_window_set_cursor (GTK_WIDGET (logview)->window, cursor);
+    gdk_cursor_unref (cursor);
+    gdk_display_flush (gtk_widget_get_display (GTK_WIDGET (logview)));
+    busy_cursor = TRUE;
+  }
+  return (FALSE);
+}  
+
+static gboolean
+logview_show_normal_cursor (LogviewWindow *logview)
+{
+  if (busy_cursor) {
+    gdk_window_set_cursor (GTK_WIDGET (logview)->window, NULL);    
+    gdk_display_flush (gtk_widget_get_display (GTK_WIDGET (logview)));
+    busy_cursor = FALSE;
+  }
+}
+
 void
 row_toggled_cb (GtkTreeView *treeview, GtkTreeIter *iter,
                 GtkTreePath *path, gpointer user_data)
@@ -251,18 +275,20 @@ logview_unbold_rows (Log *log)
 }
 
 static void
-logview_add_new_log_lines (LogviewWindow *window, Log *log)
+log_add_new_log_lines (Log *log)
 {
-  GtkTreeIter iter, child_iter, *iter_ptr;
+    GtkTreeIter iter, child_iter, *iter_ptr;
     GtkTreePath *path;
     LogBoldRows *bold_rows;
     Day *day;
     int i;
     gchar *line;
 
-    g_assert (LOGVIEW_IS_WINDOW (window));
     g_assert (log);
-    
+
+    if (log_read_new_lines (log) == FALSE)
+      return;
+
     /* Find the last expandable row */
     if (log->days) {
       day = g_list_last (log->days)->data;
@@ -296,14 +322,112 @@ logview_add_new_log_lines (LogviewWindow *window, Log *log)
     log->displayed_lines = log->total_lines;
     log->bold_rows_list = g_list_append (log->bold_rows_list, bold_rows);
 
-    path = gtk_tree_model_get_path (GTK_TREE_MODEL (log->model), &child_iter);
-    gtk_tree_view_scroll_to_cell (GTK_TREE_VIEW (window->view), path, NULL, FALSE, 1, 0.5);
-
     g_timeout_add (5000, (GSourceFunc) logview_unbold_rows, log);
 }
     
 static void
-logview_show_model (LogviewWindow *window, Log *log)
+logview_scroll_and_focus_path (LogviewWindow *logview, GtkTreePath *path)
+{
+    g_assert (LOGVIEW_IS_WINDOW (logview));
+
+    if (path != NULL)
+      gtk_tree_view_set_cursor (GTK_TREE_VIEW (logview->view), path, NULL, FALSE); 
+
+    if (path == NULL || logview->curlog->bold_rows_list != NULL) {
+      LogBoldRows *rows;
+      rows = g_list_first (logview->curlog->bold_rows_list)->data;
+      path = rows->first;
+    }
+
+    gtk_tree_view_scroll_to_cell (GTK_TREE_VIEW (logview->view), path, NULL, TRUE, 
+                                  0., 1);
+}
+
+static void
+log_fill_model_no_date (Log *log, GtkTreeModel *model)
+{
+    int i;
+    gchar *line;
+    GtkTreeIter iter;
+    
+    g_assert (log);
+
+    for (i=log->total_lines-1; i>=0; i--) {
+        line = log->lines[i];
+        gtk_tree_store_prepend (GTK_TREE_STORE (model), &iter, NULL);
+        gtk_tree_store_set (GTK_TREE_STORE (model), &iter,                            
+                            MESSAGE, line, DAY_POINTER, NULL, -1);
+        if (i == log->total_lines-1)
+            log->current_path = gtk_tree_model_get_path (model, &iter);
+    }
+}
+
+static void
+log_fill_day_iter (Log *log, GtkTreeModel *model, Day *day, GtkTreeIter *iter)
+{
+  GtkTreeIter child_iter;
+  int i;
+
+  for (i = day->last_line; i >= day->first_line; i--) {
+    gtk_tree_store_prepend (GTK_TREE_STORE (model), &child_iter, iter);
+    gtk_tree_store_set (GTK_TREE_STORE (model), &child_iter,                            
+                        MESSAGE, log->lines[i], DAY_POINTER, NULL, -1);
+  }
+}
+
+static void
+log_fill_model_with_date (Log *log, GtkTreeModel *model)
+{
+    GtkTreeIter iter;
+    GList *days;
+    Day *day;
+    int i;
+
+    g_assert (log->total_lines > 0);
+
+    /* Cycle on the days in the log */
+    /* It's not worth it to prepend instead of append */
+
+    for (days = log->days; days != NULL; days = g_list_next (days)) {
+        day = days->data;
+ 
+        gtk_tree_store_append (GTK_TREE_STORE (model), &iter, NULL);
+        model_fill_date_iter (GTK_TREE_STORE (model), &iter, day);
+        day->path = gtk_tree_model_get_path (model, &iter);
+        
+        log_fill_day_iter (log, model, day, &iter);
+
+        if (g_list_next (days) == NULL) {
+            day->expand = TRUE;
+            log->current_path = gtk_tree_path_copy (day->path);
+        } else
+            day->expand = FALSE; 
+        
+        while (gtk_events_pending ())
+          gtk_main_iteration ();
+    }
+
+    log->displayed_lines = log->total_lines;
+
+}
+
+static void
+log_create_model (Log *log)
+{
+  GtkTreeModel *model;
+
+  g_assert (log != NULL);
+  model = GTK_TREE_MODEL(gtk_tree_store_new (4, G_TYPE_STRING, G_TYPE_POINTER,
+                                                  G_TYPE_INT, G_TYPE_BOOLEAN));
+  if (log->days != NULL)
+    log_fill_model_with_date (log, model);
+  else
+    log_fill_model_no_date (log, model);
+  log->model = model;
+}  
+
+static void
+logview_set_log_model (LogviewWindow *window, Log *log)
 {    
     GList *days;
     Day *day;
@@ -327,130 +451,8 @@ logview_show_model (LogviewWindow *window, Log *log)
     }
 }
 
-static void
-logview_scroll_and_focus_path (LogviewWindow *logview, GtkTreePath *path)
-{
-    g_assert (LOGVIEW_IS_WINDOW (logview));
-    g_assert (path);
-
-    if (logview->curlog->bold_rows_list != NULL) {
-      LogBoldRows *rows;
-      rows = g_list_first (logview->curlog->bold_rows_list)->data;
-      path = rows->first;
-    }
-
-    gtk_tree_view_set_cursor (GTK_TREE_VIEW (logview->view), path, NULL, FALSE); 
-    gtk_tree_view_scroll_to_cell (GTK_TREE_VIEW (logview->view), path, NULL, TRUE, 
-                                  1, 1);
-}
-
-static void
-log_fill_model_no_date (Log *log, GtkTreeModel *model)
-{
-    int i;
-    gchar *line;
-    GtkTreePath *last_path;
-    GtkTreeIter iter;
-    
-    g_assert (log);
-
-    for (i=log->total_lines-1; i>=0; i--) {
-        line = log->lines[i];
-        gtk_tree_store_prepend (GTK_TREE_STORE (model), &iter, NULL);
-        gtk_tree_store_set (GTK_TREE_STORE (model), &iter,                            
-                            MESSAGE, line, DAY_POINTER, NULL, -1);
-        if (i == log->total_lines-1)
-            log->current_path = gtk_tree_model_get_path (model, &iter);
-    }
-}
-
-static void
-log_fill_model_date (Log *log, GtkTreeModel *model)
-{
-    GtkTreeIter iter, child_iter;
-    gchar *line;
-    GList *days;
-    Day *day;
-    int i;
-    gchar *path_string;
-
-    g_assert (log->total_lines > 0);
-
-    /* Cycle on the days in the log */
-    /* It's not worth it to prepend instead of append */
-
-    for (days = log->days; days != NULL; days = g_list_next (days)) {
-        day = days->data;
-        line = log->lines[day->first_line];
- 
-        gtk_tree_store_append (GTK_TREE_STORE (model), &iter, NULL);
-        model_fill_date_iter (GTK_TREE_STORE (model), &iter, day);
-        day->path = gtk_tree_model_get_path (model, &iter);
-
-        /* Now cycle on the lines for the studied day */
-        for (i = day->last_line; i >= day->first_line; i--) {
-            line = log->lines[i];
-            gtk_tree_store_prepend (GTK_TREE_STORE (model), &child_iter, &iter);
-            gtk_tree_store_set (GTK_TREE_STORE (model), &child_iter,                            
-                                MESSAGE, line, DAY_POINTER, NULL, -1);
-        }                
-        
-        if (g_list_next (days) == NULL) {
-            day->expand = TRUE;
-            log->current_path = gtk_tree_path_copy (day->path);
-        } else
-            day->expand = FALSE; 
-        
-        while (gtk_events_pending ())
-          gtk_main_iteration ();
-    }
-
-    log->displayed_lines = log->total_lines;
-
-}
-
-static gboolean
-logview_show_busy_cursor (LogviewWindow *logview)
-{
-  GdkCursor *cursor;
-  if (GTK_WIDGET_VISIBLE (logview->view) && logview->curlog->model == NULL) {
-    cursor = gdk_cursor_new (GDK_WATCH);
-    gdk_window_set_cursor (GTK_WIDGET (logview)->window, cursor);
-    gdk_cursor_unref (cursor);
-    gdk_display_flush (gtk_widget_get_display (GTK_WIDGET (logview)));
-    busy_cursor = TRUE;
-  }
-  return (FALSE);
-}  
-
-static void
-logview_create_model (LogviewWindow *logview, Log *log)
-{
-  GtkTreeModel *model;
-
-  g_assert (log != NULL);
-  g_assert (LOGVIEW_IS_WINDOW (logview));
-
-  g_timeout_add (200, (GSourceFunc) logview_show_busy_cursor, logview);
-  model = GTK_TREE_MODEL(gtk_tree_store_new (4, G_TYPE_STRING, G_TYPE_POINTER,
-                                                  G_TYPE_INT, G_TYPE_BOOLEAN));
-  if (log->days != NULL)
-    log_fill_model_date (log, model);
-  else
-    log_fill_model_no_date (log, model);
-  
-  log->model = model;
-  if (busy_cursor) {
-    gdk_window_set_cursor (GTK_WIDGET (logview)->window, NULL);    
-    gdk_display_flush (gtk_widget_get_display (GTK_WIDGET (logview)));
-    busy_cursor = FALSE;
-  }
-  
-
-}  
-
 void
-log_repaint (LogviewWindow *logview)
+logview_repaint (LogviewWindow *logview)
 {
     Log *log;
     g_return_if_fail (LOGVIEW_IS_WINDOW (logview));
@@ -465,14 +467,19 @@ log_repaint (LogviewWindow *logview)
       return;
     }
 
-    if (log->model == NULL)
-      logview_create_model (logview, log);
-
-    if ((log->displayed_lines < log->total_lines) && (log->displayed_lines != 0))
-      logview_add_new_log_lines (logview, log);
+    if (log->model == NULL) {
+      g_timeout_add (200, (GSourceFunc) logview_show_busy_cursor, logview);
+      log_create_model (log);
+      logview_show_normal_cursor (logview);
+    }      
+            
+    if (log->needs_refresh) {
+      log_add_new_log_lines (log);
+      log->needs_refresh = FALSE;
+    }
 
     if (gtk_tree_view_get_model (GTK_TREE_VIEW (logview->view)) != log->model)
-      logview_show_model (logview, log);
+      logview_set_log_model (logview, log);
 
     logview_scroll_and_focus_path (logview, log->current_path);
 }
